--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
     "axios": "^1.13.2",
     "expo": "~54.0.30",
     "expo-status-bar": "~3.0.9",
