--- a/app.json
+++ b/app.json
@@ -20,6 +20,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "package": "com.boi.tradingbot",
       "edgeToEdgeEnabled": true
     },
     "web": {
