--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "axios": "^1.13.2",
     "expo": "~54.0.30",
     "expo-constants": "~18.0.12",
+    "expo-dev-client": "~6.0.20",
     "expo-device": "~8.0.10",
     "expo-notifications": "~0.32.15",
     "expo-status-bar": "~3.0.9",
     "firebase": "^12.7.0",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "~5.6.0"
   },
   "private": true
 }
