chore: update API URL to use HTTPS endpoint
Update both app.json and App.js to use the new secure HTTPS endpoint for the API instead of the previous HTTP URL

--- a/app.json
+++ b/app.json
@@ -27,7 +27,7 @@
       "favicon": "./assets/favicon.png"
     },
     "extra": {
-      "API_URL": "http://54.160.2.145:8000",
+      "API_URL": "https://brickchain.online",
       "eas": {
         "projectId": "3ba5e4fc-1341-486e-a96c-6092e38931d3"
       }
