refactor(bot_engine): extract session management logic from tasks
Move trading bot session management from tasks.py to new BotSessionManager class
Update API endpoint documentation and clarify connection flow
Update API URL configurations from https to http

--- a/app.json
+++ b/app.json
@@ -28,7 +28,7 @@
       "favicon": "./assets/favicon.png"
     },
     "extra": {
-      "apiUrl": "http://192.168.43.76:8001",
+      "apiUrl": "http://brickchain.online",
       "eas": {
         "projectId": "3ba5e4fc-1341-486e-a96c-6092e38931d3"
       }
