refactor(backend): remove bot engine module and simplify requirements
Remove deprecated bot engine module including trading bot implementation, celery integration, and redis client. Simplify requirements.txt to core dependencies with version pinning.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,6 @@
-fastapi
-uvicorn
-git+https://github.com/Lu-Yi-Hsun/iqoptionapi.git
-python-dotenv
-pandas
-numpy
-requests
-TA-Lib
-exponent_server_sdk
-firebase-admin
-redis
-celery
+fastapi==0.107.0
+uvicorn[standard]==0.24.0
+celery==5.3.0
+redis==5.3.0
+pydantic==2.2.1
+requests==2.31.0
